# llm-course-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK-bundle-upload-api.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  models.py
app/api/: admin_auth.py  deps.py
app/core/: config.py  error_codes.py  errors.py  security.py
app/db/: seed.py  session.py
app/schemas/: admin_bundles.py  admin_courses.py  analytics.py  auth.py  bugs.py  courses.py  invite.py  oss.py  progress.py  sessions.py  updates.py  users.py  waitlist.py
app/scripts/: build_and_upload_chapter.py  build_chapter_bundle.py  bulk_enroll.py  create_batch_users.py  create_test_user.py  enroll_users.py  purge_fake_bundles.py  reset_courses.py  setup_course.py  upload_bundle.py  upload_curriculum_templates.py
app/services/: admin_course_service.py  auth_service.py  bundle_publish_service.py  email_sender.py  oss.py  rate_limit.py  update_service.py
docs/: admin_api_reference_en.md  admin_api_reference_zh.md
docs/plans/: 2026-02-21-bundle-download-e2e-test.md  2026-02-21-miniconda-sidecar-runtime.md  2026-02-22-cross-device-session-sync-design.md  2026-02-22-cross-device-session-sync-plan.md
migrations/: env.py
migrations/versions/: 20260207_0001_init_schema.py  20260210_0002_add_user_password_hash.py  20260222_0004_add_course_overview_fields.py  (+10 more)
scripts/: generate_invite_codes.py  get_bug_report.py
tests/: conftest.py  test_admin_bundles.py  test_admin_courses.py  test_e2e_bundle_download.py  test_p0_core_flow.py  test_session_sync.py
(+14 files in other folders)
